trunk/Archive2/7d/6a22e4547f4f5f/output
main.cpp: In instantiation of 'typename std::enable_if<({anonymous}::log_level >= L), void>::type write_log(const Args& ...) [with LogLevel L = (LogLevel)0u; Args = {main()::<lambda()>}; typename std::enable_if<({anonymous}::log_level >= L), void>::type = void]':
main.cpp:52:59:   required from here
main.cpp:37:55: error: cannot bind 'std::ostream {aka std::basic_ostream<char>}' lvalue to 'std::basic_ostream<char>&&'
         (void)std::initializer_list<int> { (std::cout << args << ' ', 0)... };
                                                       ^
In file included from /usr/local/include/c++/4.9.0/iostream:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/ostream:602:5: note: initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = main()::<lambda()>]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
main.cpp:37:9: error: no matching function for call to 'std::initializer_list<int>::initializer_list(<brace-enclosed initializer list>)'
         (void)std::initializer_list<int> { (std::cout << args << ' ', 0)... };
         ^
main.cpp:37:9: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/bits/basic_string.h:42:0,
                 from /usr/local/include/c++/4.9.0/string:52,
                 from /usr/local/include/c++/4.9.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.0/ios:42,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/initializer_list:66:17: note: constexpr std::initializer_list<_E>::initializer_list() [with _E = int]
       constexpr initializer_list() noexcept
                 ^
/usr/local/include/c++/4.9.0/initializer_list:66:17: note:   candidate expects 0 arguments, 1 provided
/usr/local/include/c++/4.9.0/initializer_list:62:17: note: constexpr std::initializer_list<_E>::initializer_list(std::initializer_list<_E>::const_iterator, std::initializer_list<_E>::size_type) [with _E = int; std::initializer_list<_E>::const_iterator = const int*; std::initializer_list<_E>::size_type = long unsigned int]
       constexpr initializer_list(const_iterator __a, size_type __l)
                 ^
/usr/local/include/c++/4.9.0/initializer_list:62:17: note:   candidate expects 2 arguments, 1 provided
/usr/local/include/c++/4.9.0/initializer_list:47:11: note: constexpr std::initializer_list<int>::initializer_list(const std::initializer_list<int>&)
     class initializer_list
           ^
/usr/local/include/c++/4.9.0/initializer_list:47:11: note:   no known conversion for argument 1 from '<type error>' to 'const std::initializer_list<int>&'
/usr/local/include/c++/4.9.0/initializer_list:47:11: note: constexpr std::initializer_list<int>::initializer_list(std::initializer_list<int>&&)
/usr/local/include/c++/4.9.0/initializer_list:47:11: note:   no known conversion for argument 1 from '<type error>' to 'std::initializer_list<int>&&'
